--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,7 +16,6 @@
   "bugs": {
     "url": "https://github.com/misbahkhalilaz/progstream_assignment_backend/issues"
   },
-  "homepage": "https://github.com/misbahkhalilaz/progstream_assignment_backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1"
